public/css/styles.css
.success {
    background-color: green;
}
.failure {
    background-color: red;
}
body {
    background-color: #6BBAA7;
}
.navbar {
    background-color: #FBA100;
}
ul.navbar, ul.navbar li {
    display:inline-block;
}
.main-container {
    background-color: #B6A19E;
    max-width: 100vw;
}
.user-box {
    border: 1px solid transparent;
    color: #B6A19E;
    border-radius: 10px;
    margin: 2%;
    padding: 2%;
    background-color: #6C648B;
}
.user-box:hover {
    background-color: #FBA100;
    color: black;
}

